--- a/project.html
+++ b/project.html
@@ -351,9 +351,14 @@
                             information about my skills, experiences, and projects. <br> The website is designed to be visually appealing, easy to
                             navigate, and responsive to different screen sizes. My digital showcase comes to life through the harmonious symphony of 
                             HTML, CSS, and JavaScript, weaving an intricate
-                            tapestry of code that forms my portfolio website, 
+                            tapestry of code that forms my portfolio website. <!-- 
                             allowing visitors to get a comprehensive overview of my 
-                            capabilities and accomplishments.
+                            capabilities and accomplishments. -->
+                            <br><br>
+                            <a href="https://shivangi153.github.io/my-portfolio/" target="_blank" class="project-link">
+                                <span>🔗</span>shivangi153.github.io/my-portfolio
+                            </a>
+
                         </p>
                     </div>
                 </div>
